2004-11-09  Sarfraaz Ahmed <asarfraaz@novell.com>

	* MAINTAINERS : Added a new file

2004-11-08  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-folder-size.c : Revamped the code to now be a class
	so other hierarchy classes can now instantiate this as an object and
	this class handles only the displaying of the folder tree
	* storage/exchange-folder-size.h : Similar

2004-11-04  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-folder-size.c : Added a new file. This handles the
	displaying of the folder sizes
	* storage/exchange-folder-size.h : Similar
	* storage/exchange-folder-tree.glade : The dialog for displaying the 
	folder tree and the folder sizes

2004-11-04  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_connect): Finding
	password expiry period. Removed unused variables.
	(find_passwd_exp_period): Finds the days left for password to expire
	and displys the warning. 

	* lib/e2k-global-catalog.[ch] (e2k_global_catalog_lookup)
	(get_account_control_values): Finding the value of the attribute 
	userAccountControl.
	(find_domain_dn): Forming the base DN for the LDAP search for maxPwdAge
	from domain name.
	(lookup_passwd_max_age): Finds the value of the attribute maxPwdAge.

	* lib/gctest.c (do_lookup): Looking up for userAccountControl and maxPwdAge
	attributes.

2004-11-03  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-account.c (exchange_account_connect)(exchange_account_new)
	: Check if the user has provided a domain as part of the username field and
	store it for connecting to the server using form-based-authentication
	(finalize) : Cleanup the private member.

2004-11-01  JP Rosevear  <jpr@novell.com>

	* storage/Makefile.am (DISTCLEANFILES): dist clean the server file

	* Makefile.am: add intltool-* to distclean files

2004-10-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-factory.c (_todos_new_backend) :